trunk/Archive2/b6/d03fa82828cb7f/output
main.cpp: In function 'int main()':
main.cpp:41:30: error: '_global' was not declared in this scope
     std::cout << "Type: " << _global.target_type().name() << "\n";
                              ^
